--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -663,7 +663,7 @@ $$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac{S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S
 
 For $S_{yy}S_{xx}>S_{xy}^2$, $S_{xx}^2>\lambda S_{xy}^2$, $S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2>0$
 
-When $S_{xy}>0$, $\frac{d}{d\lambda}\hat\beta(\lambda)>0$; when $S_{xy}<0$, $\frac{d}{d\lambda}\hat\beta(\lambda)<0$, 
+When $S_{xy}>0$, $\frac{d}{d\lambda}\hat\beta(\lambda)>0$; when $S_{xy}<0$, $\frac{d}{d\lambda}\hat\beta(\lambda)<0$. 
 
 Therefore, $\hat\beta(\lambda)$ is monotone in $\lambda$ and is increasing if $S_{xy}>0$ and decreasing if $S_{xy}<0$.
 
@@ -705,7 +705,7 @@ var(x)
 var(y)
 ```
 
-```{r echo=TRUE, collapse=T}
+```{r collapse=T, include=FALSE}
 s_xx
 s_yy
 s_xy
@@ -718,6 +718,11 @@ s_xy/s_xx
 s_yy/s_xy
 ```
 
+$S_{xx}=\sum_{i=1}^8(x_i-\bar x)^2=9.095278$
+
+$S_{yy}=\sum_{i=1}^8(y_i-\bar y)^2=1358.255,\quad S_{xy}=96.1501$
+
+$S_{xy}=\sum_{i=1}^8(y_i-\bar y)(x_i-\bar x)=96.1501$
 
 If $\lambda=1$,
 $\hat\beta(\lambda)=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}=14.10272$
