--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -653,13 +653,13 @@ $$\lim\limits_{\lambda\to\infty}\hat\beta(\lambda)=\frac{-(0-S_{yy}) + \sqrt{(0-
  
 (c) Show that $\hat\beta(\lambda)$ is, in fact, monotone in $\lambda$ and is increasing if $S_{xy}>0$ and decreasing if $S_{xy}<0$.
 
-$$\frac{d}{d\lambda}\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=-\frac{S_{xx}}{2S_{xy}\lambda}+\frac{S_{yy}}{2S_{xy}}+[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{\frac12}$$
+$\frac{d}{d\lambda}\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=-\frac{S_{xx}}{2S_{xy}\lambda}+\frac{S_{yy}}{2S_{xy}}+[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{\frac12}$
 
-$$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{-\frac12}[(\frac{S_{xx}}{S_{xy}\lambda}-\frac{S_{yy}}{S_{xy}})(-\frac{S_{xx}}{2S_{xy}\lambda^2})-\frac1{\lambda^2}]$$
+$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{-\frac12}[(\frac{S_{xx}}{S_{xy}\lambda}-\frac{S_{yy}}{S_{xy}})(-\frac{S_{xx}}{2S_{xy}\lambda^2})-\frac1{\lambda^2}]$
 
-$$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{-\frac12}\frac1{2S_{xy}^2\lambda^2}[S_{yy}S_{xx}-S_{xx}^2-2S_{xy}^2]$$
+$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac12[(\frac{S_{xx}}{2S_{xy}\lambda}-\frac{S_{yy}}{2S_{xy}})^2 +\frac1\lambda]^{-\frac12}\frac1{2S_{xy}^2\lambda^2}[S_{yy}S_{xx}-S_{xx}^2-2S_{xy}^2]$
 
-$$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac{S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2}{2S_{xy}\lambda^2[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{\frac12}}=\frac{1}{2S_{xy}\lambda^2}(S_{xx}+\frac{S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2}{[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{\frac12}})$$
+$=\frac{S_{xx}}{2S_{xy}\lambda^2}+\frac{S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2}{2S_{xy}\lambda^2[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{\frac12}}=\frac{1}{2S_{xy}\lambda^2}(S_{xx}+\frac{S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2}{[4S_{xy}^2\lambda +(S_{xx}-S_{yy}\lambda)^2]^{\frac12}})$
 
 For $S_{yy}S_{xx}>S_{xy}^2$, $S_{xx}^2>\lambda S_{xy}^2$, $S_{yy}S_{xx}\lambda-S_{xx}^2-2\lambda S_{xy}^2>0$
 
@@ -720,7 +720,7 @@ s_yy/s_xy
 
 $S_{xx}=\sum_{i=1}^8(x_i-\bar x)^2=9.095278$
 
-$S_{yy}=\sum_{i=1}^8(y_i-\bar y)^2=1358.255,\quad S_{xy}=96.1501$
+$S_{yy}=\sum_{i=1}^8(y_i-\bar y)^2=1358.255$
 
 $S_{xy}=\sum_{i=1}^8(y_i-\bar y)(x_i-\bar x)=96.1501$
 
