--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -635,9 +635,9 @@ where $\lambda=\sigma^2_\delta/\sigma^2_\varepsilon$ is assumed known.
 
 (a) Show that $\lim\limits_{\lambda\to0}\hat\beta(\lambda)=S_{xy}/S_{xx}$, the slope of the ordinary regression of y on x.
 
-$$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=\frac{\left[-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]\left[(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]}{2\lambda S_{xy}\left[(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]}$$
+$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}=\frac{\left[-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]\left[(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]}{2\lambda S_{xy}\left[(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]}$
 
-$$=\frac{-(S_{xx}-\lambda S_{yy})^2+(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}{2\lambda S_{xy}\left[(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]}=\frac{2S_{xy}}{(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}$$
+$=\frac{-(S_{xx}-\lambda S_{yy})^2+(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}{2\lambda S_{xy}\left[(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}\right]}=\frac{2S_{xy}}{(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}$
 
 $$\lim\limits_{\lambda\to0}\hat\beta(\lambda)=\frac{2S_{xy}}{(S_{xx}-0) + \sqrt{(S_{xx}-0)^2 +0}}=S_{xy}/S_{xx}$$
 
