--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -898,19 +898,14 @@ Consider a single replicated 3-factor factorial model with all the main effects 
 $$y_{ijk}=\mu+\tau_i+\beta_j+\gamma_k+(\tau\beta)_{ij}+(\tau\gamma)_{ik}+\varepsilon_{ijk}$$
 
 for $i=1,2..,a$ is the number of treatment $A$ ; 
-
 $j=1,2,..,b$ is the number of treatment $B$; 
-
 $k=1,2,..,c$ is the number of treatment $C$; 
 
 $y_{ijk}$ is response value when $i^{th}$ treatment A, $j^{th}$ treatment B, and $k^{th}$ treatment C is applied;
 
 $\mu$ is the overall true mean response;
-
 $\tau_i$ is the random effect of $i^{th}$ treatment;
-
 $\beta_j$ is the random effect of $j^{th}$ treatment;
-
 $\gamma_k$ is the random effect of $k^{th}$ treatment;
 
 $(\tau\beta)_{ij}$ is the interaction random effect of $i^{th}$ treatment $A$ and $j^{th}$ treatment $B$;
@@ -922,7 +917,6 @@ $\varepsilon_{ijk}$ is random error when $i^{th}$ treatment A, $j^{th}$ treatmen
 Assumptions: 
 
 $\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\tau_{i}\sim iid N(0,\sigma_\tau^2)$; $\beta_{j}\sim iid N(0,\sigma_\beta^2)$; $\gamma_{k}\sim iid N(0,\sigma_\gamma^2)$; 
-
 $(\tau\beta)_{ij}\sim iid N(0,\sigma_{\tau\beta}^2)$; $(\tau\gamma)_{ik}\sim iid N(0,\sigma_{\tau\gamma}^2)$; 
 
 $\varepsilon_{ijk}$, $\tau_{i}$, $\beta_{j}$, $\gamma_{k}$, $(\tau\beta)_{ij}$, and $(\tau\gamma)_{ik}$ are independent.
@@ -945,7 +939,15 @@ $=abc-ab-ac+a=a(b-1)(c-1)$
 ### Problem 4
 
 Consider the two-factor restricted mixed model with A has fixed effect and B has random effect given below.
- 
+
+$y_{ijk}=\mu+\tau_i+\beta_j+(\tau\beta)_{ij}+\varepsilon_{ijk}$,
+$i=1,2..,a$; $j=1,2,..,b$; $k=1,2,..,n$; 
+
+Assumptions: 
+
+$\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\sum_{i=1}^a\tau_{i}=0$; $\sum_{i=1}^a(\tau\beta)_{ij}=0$ (restricted model); $\beta_{j}\sim iid N(0,\sigma_\beta^2)$; 
+$(\tau\beta)_{ij}\sim iid N(0,\sigma_{\tau\beta}^2)$;
+$\varepsilon_{ijk}$, $\beta_{j}$, and $(\tau\beta)_{ij}$ are independent.
 
 Derive the E(SSAB) for this model using only the given information here.
 
