--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -770,7 +770,7 @@ $(1.5.4)\qquad \sum_{k=1}^nt^{k-1}=\frac{1-t^n}{1-t},\ t\neq1$
 
  ---
  
-(c) The correlation structure in part (b) arises in an autoregressive $AR(l)$ model, where we assume that $X_{i+1}=\rho X_i+\delta_i$, with $\delta_i\sim iid\ n(0,1)$. If $|\rho_i|<1$ and we define $\sigma^2=1/(1-\rho^2)$, show that $Corr(X_1,X_i) =\rho^{|i-1|}$.
+(c) The correlation structure in part (b) arises in an autoregressive $AR(1)$ model, where we assume that $X_{i+1}=\rho X_i+\delta_i$, with $\delta_i\sim iid\ n(0,1)$. If $|\rho_i|<1$ and we define $\sigma^2=1/(1-\rho^2)$, show that $Corr(X_1,X_i) =\rho^{|i-1|}$.
 
 The mean and variance of $X_i$ are
 $$E[X_i]=E[E(X_i|X_{i−1})] = E[\rho X_{i−1}] =\cdots=\rho^{i−1}E[X_1]$$
