--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -705,7 +705,7 @@ $\beta_j$ is the random effect of $j^{th}$ operator;
 $(\tau\beta)_{ij}$ is the interaction random effect of $i^{th}$ part and $j^{th}$ operator;
 
 $y_{ijk}$ is response value for the $k^{th}$ replication when $i^{th}$ part and $j^{th}$ operator are applied;
-$\varepsilon_{ijk}$ is random error for the $k^{th}$ replication when $i^{th}$ treatment A, $j^{th}$ treatment B, and $k^{th}$ treatment C is applied.
+$\varepsilon_{ijk}$ is random error for the $k^{th}$ replication when $i^{th}$ part, $j^{th}$ operator, and $k^{th}$ replication is applied.
 
 Assumptions: 
 
@@ -836,6 +836,28 @@ confint(hw4_model2)
 ### Problem 2 (13.6)
 
 Reanalyze the measurement systems experiment in Problem 13.1, assuming that operators are a fixed factor. Estimate the appropriate model components using the ANOVA method.
+
+$$y_{ijk}=\mu+\tau_i+\beta_j+(\tau\beta)_{ij}+\varepsilon_{ijk}$$
+
+for $i=1,2..,10$ is the number of parts; 
+$j=1,2$ is the number of operators; 
+$k=1,2,3$ is the number of replication; 
+
+$\mu$ is the overall true mean response;
+$\tau_i$ is the random effect of $i^{th}$ part;
+$\beta_j$ is the fixed effect of $j^{th}$ operator;
+$(\tau\beta)_{ij}$ is the interaction random effect of $i^{th}$ part and $j^{th}$ operator;
+
+$y_{ijk}$ is response value for the $k^{th}$ replication when $i^{th}$ part and $j^{th}$ operator are applied;
+$\varepsilon_{ijk}$ is random error for the $k^{th}$ replication when $i^{th}$ part, $j^{th}$ operator, and $k^{th}$ replication is applied.
+
+Assumptions: 
+
+$\varepsilon_{ijk}\sim iid N(0,\sigma^2)$; $\tau_{i}\sim iid N(0,\sigma_\tau^2)$; $\sum_{j=1}^b\beta_{j}=0$; 
+$(\tau\beta)_{ij}\sim iid N(0,\sigma_{\tau\beta}^2)$;
+
+$\varepsilon_{ijk}$, $\tau_{i}$, and $(\tau\beta)_{ij}$ are independent.
+
 
 Fit the restricted model using REML.
 
