--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -1177,9 +1177,9 @@ $=abc-ab-ac+a=a(b-1)(c-1)$
 
 |term | i(f) | j(r) | k(r) | l(r) | df |  SS | EMS | F   |
 | --- |-- |-- | --| -- | -- | --- | --- | --- |
-|A$\tau_{i}$f|0|b|c|n|a-1|$\frac1{bcn}\sum_{i=1}^ay_{i...}^2-\frac{1}{abcn}y_{....}^2$|$bc\sigma^2_{\tau}+c\sigma^2_{\tau\beta}+b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{A}}{MS_{AB}+MS_{AC}-MS_{E}}$|
-|B(A)$\beta_{j(i)}$r|1|1|c|n|a(b-1)|$\frac1{cn}\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{.j..}^2-\frac1{bcn}\sum_{i=1}^ay_{i...}^2$|$ac\sigma^2_{\beta}+c\sigma^2_{\tau\beta}+\sigma^2$|$\frac{MS_{B}}{MS_{AB}}$|
-|C(BA)$\gamma_{k(ji)}$r|1|1|1|n|a(b-1)(c-1)|$\frac1{ab}\sum_{k=1}^cy_{..k}^2-\frac{1}{abc}y_{...}^2$|$ab\sigma^2_{\gamma}+b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{C}}{MS_{AC}}$|
+|A$\tau_{i}$f|0|b|c|n|a-1|$\frac1{bcn}\sum_{i=1}^ay_{i...}^2-\frac{1}{abcn}y_{....}^2$|$bcn\sigma^2_{\tau}+cn\sigma^2_{\beta}+n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{A}}{MS_{B(A)}$|
+|B(A)$\beta_{j(i)}$r|1|1|c|n|a(b-1)|$\frac1{cn}\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{.j..}^2-\frac1{bcn}\sum_{i=1}^ay_{i...}^2$|$cn\sigma^2_{\beta}+n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{B(A)}}{MS_{C(AB)}}$|
+|C(BA)$\gamma_{k(ji)}$r|1|1|1|n|a(b-1)(c-1)|$\frac{\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^cy_{ijk.}^2}{n}-\frac{\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{.j..}^2}{cn}-\frac{\sum\limits_{i=1}^a\sum\limits_{k=1}^cy_{..k.}^2}{bn}+\frac{\sum_{i=1}^ay_{i...}^2}{bcn}$|$n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{C(AB)}}{MS_{E}}$|
 |$\varepsilon_{ijkl}$|1|1|1|1|abc(n-1)|$\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^c\sum\limits_{l=1}^ny_{ijkl}^2-\frac1n\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^cy_{ijk.}^2$|$\sigma^2$||
 |Total| | | | |abcn-1|$\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^c\sum\limits_{l=1}^ny_{ijkl}^2-\frac{y_{....}^2}{abcn}$|
 
